--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "monitored_youtube_channels": [],
     "monitored_twitch_channels": [],
 
-    "youtube_api_key": "YOUR_YOUTUBE_CLIENT_ID",
+    "youtube_api_key": "AIzaSyD94CKlVnsWOn9DbMy2vswiDoUEDZ53XE0",
     "twitch_client_id": "YOUR_TWITCH_CLIENT_ID",
 
     "youtube_notification_channel": null,
