--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.9.3
+pyaiohttp==3.9.3
 aiosignal==1.3.1
 anyio==4.3.0
 async-timeout==4.0.3
@@ -48,7 +48,7 @@ Pygments==2.17.2
 PyNaCl==1.5.0
 PySocks==1.7.1
 python-dateutil==2.8.2
-python-dotenv==1.0.0
+python-dotenv~=1.0.1
 pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.3
@@ -73,3 +73,6 @@ wsproto==1.2.0
 yarl==1.9.4
 youtube-dl==2021.12.17
 yt-dlp==2024.3.10
+
+aiohttp~=3.9.3
+discord~=2.3.2
